# Phuc-CXHCTL_Design

./: .gitignore  .gitmodule  .gitmodules  AI_main.py  Kaifa_workpiece_measuring.py  camera.py  demo_main.py  demo_measuring_main.py  rect_measuring_main.py
AI_Demo/: UnifiedMain_OOP.py  UnifiedUtils.py  camera.py  virtual_keyboard.py
CF Wifi/: extran_event_callback.h  file_server.h  lock.h  main.h
CF Wifi v1.1/: file_server.c  lock.c  main.c  mount.c  usb_msc.c  usb_msc.h  wifi_server.c
CF Wifi v1.2/: CMakeLists.txt  file_server.c  main.c  main.h
CF Wifi v1.2/static/: output.css  script.js
Chatbot_IO/: README.md  compile_commands.json  sdkconfig.old
Chatbot_IO_BE/: CMakeLists.txt  sdkconfig
Chatbot_IO_BE/main/: CMakeLists.txt  extra_event_callback.h  http_server.c  http_server.h  mdns_helper.c  mqtt_helper.c  mqtt_helper.h  nvs_helper.c  uart_helper.c  wifi_helper.c  wifi_helper.h
DetectOAxis_Realtime/: Form1.Designer.cs  Form1.cs  Program.cs
ESP32/: AI_OCR.py  Detect_ESP32_IP.py  Virtual_Keyboard.py  Virtual_Keyboard_TC.py
FPGA IDE Device/: fpga_ide_device.gprj
Measuring/: accuracy_measuring.py  demo_measuring_main.py  tool_angle_test.py
OCR/: convert_pdf_main.py
OCR_tests/: AI_Project_test.py  convert_drawings.py  convert_pdf.py  convert_pdf_main.py  convert_pdf_main_2.py  convert_pdf_main_test.py  test_drawing.py  train.py
Relays_Board/: Virtual_Keyboard_OT.py  Virtual_Keyboard_TC.py
SYSTEM FILE/: CEX0DATH.000  CEX1LN.000  CEX8LN.000  CEX9LN.000  (+17 more)
main/: CMakeLists.txt  file_server.c  mount.c  wifi_server.h
main/static/: output.css
(+222 files in other folders)
