idf_component_register(SRCS "main.c"
                            "nvs_helper.c" 
                            "uart_helper.c" 
                            "http_server.c"
                            "wifi_helper.c"
                            "mqtt_helper.c"
                            "mdns_helper.c"
                    INCLUDE_DIRS ".")
